--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,15 @@
 <h1>Welcome!</h1>
 
 <br>
-<a href="<%= new_user_path %>"/>Sign Up</a>
-<br>
-<%= link_to "Log In", login_path %>
+<% if !current_user %>
+
+	<a href="<%= new_user_path %>"/>Sign Up</a>
+	<br>
+	<%= link_to "Log In", login_path %>
+<% end %>
+
+<% if current_user %>
+	<%= link_to "#{current_user.first_name}'s profile", user_path(current_user) %>
+	<br>
+	<%= link_to "Log Out", session_path, method: 'delete' %>
+<% end %>
