--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @user.title %> <%= @user.last_name %>'s Classrooms</h1>
 
 
-<p><%= link_to 'Create New Class', []
+<%= link_to 'Create a new classroom', new_classroom_path %>
