add form for new student, outline student show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,10 @@
 
 <%= link_to 'Create a new classroom', new_user_classroom_path(current_user) %>
 
+<br>
+<br>
+<%= link_to 'Create a new student', new_student_path %>
+
 <p>Classrooms:</p>
 <% current_user.classrooms.each do |classroom| %>
 	<div><%= link_to classroom.subject, user_classroom_path(current_user, classroom.id) %></div>
