add links back to home/profile pages

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,7 +1,12 @@
-<p>Student Name: <%= @student.first_name %> <%= @student.last_name %></p>
+<p>Student Name: <%= @student.full_name %></p>
 <p>Grade: <%= @student.grade %></p>
 <p>Classes:<br>
 	<% @student.classrooms.each do |classroom| %>
 		<%= classroom.subject %><br>
 	<% end %>
 </p>
+
+<%= link_to 'Back to home page', root_path %>
+<br>
+<br>
+<%= link_to 'Back to Profile page', current_user %>
