link to student page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,10 @@
 <br>
 <br>
 <%= link_to 'Create a new student', new_student_path %>
+<br>
+<br>
+
+<%= link_to 'List of all students', students_path %>
 
 <p>Classrooms:</p>
 <% current_user.classrooms.each do |classroom| %>
