add delete optionto students

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -6,6 +6,10 @@
 	<% end %>
 </p>
 
+<br><br>
+<%= link_to 'Edit Student', edit_student_path %>
+<br><br>
+
 <%= link_to 'Back to home page', root_path %>
 <br>
 <br>
