--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,15 @@
+<% if @user.errors.any? %>
+	<h2>
+		<%= pluralize(@user.errors.count, "error") %>
+		prohibited your information from being saved:
+	</h2>
+	<ul>
+		<% @user.errors.full_messages.each do |msg| %>
+		<li><%= msg %></li>
+		<% end %>
+	</ul>
+<% end %>
+
 <%= form_for @user do |f| %>
 
 	<%=  f.label :title %>
