--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,3 +1,15 @@
+<% if @student.errors.any? %>
+	<h2>
+		<%= pluralize(@student.errors.count, "error") %>
+		prohibited the classroom from being saved:
+	</h2>
+	<ul>
+		<% @student.errors.full_messages.each do |msg| %>
+		<li><%= msg %></li>
+		<% end %>
+	</ul>
+<% end %>
+
 <h1>Create a New Student</h1>
 
 <%= form_for @student do |f| %>
@@ -10,8 +22,14 @@
 	<br>
 	<%= f.label :grade %>
 	<%= f.text_field :grade %>
-	<br>
+	<br><br>
+	<%= f.label 'Add student to already existing class(es):' %><br><br>
 	<%= f.collection_check_boxes :classroom_ids, current_user.classrooms.all, :id, :subject %>
+		<br>
 		<br>
 	<%= f.submit %>
 <% end %>
+
+<br><br>
+<%= link_to 'Back to home page', root_path %><br>
+<%= link_to 'Back to profile page', @user %>
