add profile/homepage/logout links to bottom of each view

--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -25,5 +25,12 @@
 <% end %>
 
 <br><br>
-<%= link_to 'Back to home page', root_path %><br>
-<%= link_to 'Back to profile page', @user %>
+
+
+<%= link_to 'Back to Profile page', current_user %>
+<br>
+<br>
+<%= link_to 'Back to home page', root_path %>
+<br>
+<br>
+<%= link_to "Log Out", logout_path, method: 'delete' %>
