--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,3 +30,14 @@
 
 	<%= f.submit %>
 <% end %>
+
+
+<br>
+<br>
+<%= link_to 'Back to Profile page', current_user %>
+<br>
+<br>
+<%= link_to 'Back to home page', root_path %>
+<br>
+<br>
+<%= link_to "Log Out", logout_path, method: 'delete' %>
