--- a/app/views/classrooms/edit.html.erb
+++ b/app/views/classrooms/edit.html.erb
@@ -28,5 +28,11 @@
 <%= button_to "Delete Classroom", user_classroom_path, method: :delete %>
 
 <br><br>
-<%= link_to 'Back to home page', root_path %><br>
-<%= link_to 'Back to profile page', @user %>
+
+<%= link_to 'Back to Profile page', current_user %>
+<br>
+<br>
+<%= link_to 'Back to home page', root_path %>
+<br>
+<br>
+<%= link_to "Log Out", logout_path, method: 'delete' %>
