--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -12,6 +12,11 @@
 <%= link_to 'Edit Classroom', edit_user_classroom_path %>
 
 <br><br>
+
+<%= link_to 'Back to Profile page', current_user %>
+<br>
+<br>
 <%= link_to 'Back to home page', root_path %>
-<br><br>
-<%= link_to 'Back to profile page', current_user %>
+<br>
+<br>
+<%= link_to "Log Out", logout_path, method: 'delete' %>
