--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,5 +5,11 @@
 
 <br>
 <br>
-<%= link_to 'Back to home page', root_path %><br>
-<%= link_to 'Back to profile page', current_user %>
+
+<%= link_to 'Back to Profile page', current_user %>
+<br>
+<br>
+<%= link_to 'Back to home page', root_path %>
+<br>
+<br>
+<%= link_to "Log Out", logout_path, method: 'delete' %>
