--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -10,7 +10,10 @@
 <%= link_to 'Edit Student', edit_student_path %>
 <br><br>
 
+<%= link_to 'Back to Profile page', current_user %>
+<br>
+<br>
 <%= link_to 'Back to home page', root_path %>
 <br>
 <br>
-<%= link_to 'Back to Profile page', current_user %>
+<%= link_to "Log Out", logout_path, method: 'delete' %>
