--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,8 @@
 	<a href="<%= new_user_path %>"/>Sign Up</a>
 	<br>
 	<%= link_to "Log In", login_path %>
+	<br>
+	<%= link_to "Log in with Facebook", '/auth/facebook' %>
 <% end %>
 
 <% if current_user %>
