--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,12 @@
 <br>
 
 <%= link_to 'List of all students', students_path %>
+<br>
+<br>
+
+<%= link_to 'Add a meeting time to a classroom', new_student_classroom_path %>
+<br>
+<br>
 
 <p>Classrooms:</p>
 <% current_user.classrooms.each do |classroom| %>
