--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,13 +1,10 @@
-<h1>Create a New Class Time</h1>
+<h1>Add a Start Date and Time to a Class</h1>
 
 <%= form_for @student_classroom, url: student_classrooms_path do |f| %>
-	<%= f.label :classtime %>
+	<%= f.label 'Class Time' %>
 	<%= f.datetime_select :classtime %>
 	<br><br>
-	<%= f.label 'What class is this for?' %>
-	<br><br>
-	<%= f.collection_check_boxes :classroom_ids, Classroom.all, :id, :subject %>
-	<br>
+
 	<%= f.submit %>
 <% end %>
 
